--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -179,9 +179,24 @@ header{
 	margin-top:20px;
 	padding:30px;
 }
-.marketing-media img{
+.marketing-media img {
 	display: block;
 	margin:0 auto 20px;
+	border:10px solid #3c3c3c;
+    border-radius: 350px;
+    -webkit-border-radius: 350px;
+    -moz-border-radius: 350px;
+    -webkit-transition: all 0.6s ease-in-out;
+    -moz-transition: all 0.6s ease-in-out;
+    -o-transition: all 0.6s ease-in-out;
+    transition: all 0.6s ease-in-out;
+}
+.marketing-media img:hover {
+	border:10px solid #018B7E;
+    -webkit-transition: all 0.6s ease-in-out;
+    -moz-transition: all 0.6s ease-in-out;
+    -o-transition: all 0.6s ease-in-out;
+    transition: all 0.6s ease-in-out;
 }
 /* Pricing */
 .pricing-box{
