Added Dandelion S3 support

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -215,6 +215,12 @@ header{
 	background-color:#b0402a;
 }
 
+.phone-carousel img{
+	height: 500px;
+	margin: 0 auto;
+	display: block;
+}
+
 
 /* 
  * Section Wrap 
