--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -525,6 +525,19 @@ footer{
 }
 
 
+@media (max-width: 320px){
+	.social-icons > a{
+		font-size: 14px;
+		padding:5px 7px;
+		text-shadow: 0px 1px rgba(0,0,0,0.2);
+	}
+	.social-icons.text-right > a{
+		margin-left:0px;
+	}
+	.social-icons.text-left > a{
+		margin-right:0px;
+	}
+}
 
 @media (max-width: 767px){
 	body{
